@@ -814,8 +814,16 @@ AM_CONDITIONAL(HAVE_W3M, test "x$W3M" != "xno")
 
 dnl disable build of workshop operations.
 AC_ARG_ENABLE([workshop],
-              [  --enable-workshop       enable build of workshop operations (default=no)],,
+              [  --enable-workshop       allow use of GPL code, the frequency domain operations are build \
+	        and gegl will be under GPL (default=no)],,
               enable_workshop="no")
+
+AM_CONDITIONAL(ENABLE_GPL, test "x$enable_gpl" == "xyes")
+
+dnl disable gpl codes.
+AC_ARG_ENABLE([gpl],
+              [  --enable-gpl       enable build of gpl licence codes (frequency domain operations) (default=no)],,
+              enable_gpl="no")
 
 AM_CONDITIONAL(ENABLE_WORKSHOP, test "x$enable_workshop" == "xyes")
 
@@ -864,6 +872,7 @@ Optional features:
   Build workshop: $enable_workshop
   Build website:  $have_asciidoc
   SIMD:           sse:$enable_sse mmx:$enable_mmx
+  GPL:		  $enable_gpl
 
 Optional dependencies:
   GTK+:           $have_gtk
